chisha.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400@family=Rubik:wght@300;400&display=swap');

body{
background-color: #FBDA61;
background-image: linear-gradient(65deg, #FBDA61 0%, #FF5ACD 60%, #00FFFF 110%);
background-size: 200% 100%;
animation: gradient 5s linear infinite alternate;
height: 100vh;
display: flex;
justify-content: left;
font-family: Open Sans, sans-serif;
font-size: larger;
writing-mode: horizontal-rl;
display: block;
}

@keyframes gradient {
  0%  {
    background-position: 0%;    
    }
  100% {
    background-position: 100%;  
  }
}

h1 {
    color: white;
    font-family: Open Sans, sans-serif;
    font-weight: 200;
    font-size: 6rem;
    letter-spacing: 1rem;
    text-align: center;
}

h2 {
    color: white;
    font-weight: 200;
    font-size: 5rem;
    letter-spacing: 0.25rem;
    text-align: center;
}

h3 {
  color: white;
  font-weight: 200;
  font-size: 2rem;
  letter-spacing: 0.25rem;
  text-align: center;
}


[data-tab-content] {
  display: none;
}

.active[data-tab-content] {
  display: block;
}

body { /* border line will appear on whole page*/
  padding: 0;
  margin: 0;
}

.tabs { 
  display: flex;
  justify-content: space-around;
  list-style-type: none;
  margin: 0;
  padding: 0;
  border-bottom: 4px solid black;
  font-weight: 600;
}

.tab { 
 cursor: pointer;
 padding: 10px;
}

.tab.active {
  background-color: white;
}

.tab:hover {
  background-color: rgb(233, 162, 215);
}

.tab-content {
  margin-left: 20px;
  margin-right: 20px;
}

